[project]
name = "surogate-hub-stats-worker"
version = "0.1.0"
description = "Post-commit stats worker for Surogate Hub dataset repositories"
requires-python = ">=3.10"
dependencies = [
    "fastapi >=0.110",
    "uvicorn[standard] >=0.27",
    "duckdb >=0.9.0",
    "pyarrow >=10.0.0",
    "datasets >=2.14",
    "fsspec >=2024.0.0",
    "surogate-hub-sdk",
]

[project.optional-dependencies]
dev = [
    "pytest >=7.2.1",
    "httpx >=0.25",
]

[project.scripts]
surogate-hub-stats-worker = "surogate_hub_worker.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["surogate_hub_worker*"]
exclude = ["tests*"]
